src/snapshots/mend__run__tests__create_run_status_include_hooks.snap
---
source: src/run.rs
expression: status
---
steps:
  - run: cmd arg1 arg2
    run_resolved:
      - echo Hello before
      - "cmd arg1 arg2\n"
      - echo Hello after
    commit_msg: cmd arg1 arg2
    sha: ~
    status: Pending
    output: ~

