src/snapshots/mend__run__tests__create_run_status_include_hooks_matching_on_tag.snap
---
source: src/run.rs
expression: status
---
steps:
  - step_request:
      run: cmd arg1 arg2
      run_resolved:
        - echo Hello before some_tag
        - "function cmd() {\nresolved $1 $2\n}\ncmd arg1 arg2\n"
      commit_msg: cmd arg1 arg2
    step_response:
      sha: ~
      status: Pending
      output: ~

